
Revision 0.2.3, released XX-09-2017
-----------------------------------

- Fixed crash during TRAPv1 handling at the server part

Revision 0.2.2, released 04-07-2017
-----------------------------------

- GETBULK PDU support added to the oidfilter plugin
- Two-digit subsecond precision implemented across all logs
- Unique, system-wide request identifier implemented under the name
  of callflow-id
- System logging reworked for uniformity and usability
- Fix to catch errors coming from SNMP engine when sending malformed
  message SNMP
- Fix to snmp-peer-timeout option documentation and examples
- Fix to the server to handle the case of missing response PDU
  coming from client

Revision 0.2.1, released 28-05-2017
-----------------------------------

- Built-in logging at different verbosity levels implemented
  (via new --log-level option)
- Log SNMP authentication failures
- Optionally log denied OIDs at the oidfilter plugin
- Added timestamping to file log
- The plugin-options setting fixed to support a list of options,
  as its name suggests
- Fixed malformed timestamp logging at the logger plugin

Revision 0.2.0, released 16-05-2017
-----------------------------------

- Server message classifiers made available at the client side
  for message routing purposes
- Trunk keep-alive service implemented
- Client-side plugins support implemented
- Examples and docs on transparent proxy mode and running at
  secondary interfaces added
- Performance of the "oidfilter" plugin improved on large
  access lists by introducing dichotomy search and operating
  on built-in "tuple" type
- Enforced "oidfilter" configuration consistency by adding
  a bunch of load-time checks

Revision 0.1.0, released 07-05-2017
-----------------------------------

- SNMP TRAP PDU forwarding implemented
- SNMP PDU OIDs filtering plugin implemented
- The "rewrite" plugin reworked to match OIDs and regexp values
- The "logger" plugin refactored to understand more macros; macro names used